Fix window scrollable when modal visible.

--- a/webapp/src/styles/App.scss
+++ b/webapp/src/styles/App.scss
@@ -19,6 +19,10 @@ body,
   height: 100%;
 }
 
+#root {
+  overflow-y: auto;
+}
+
 .clickable {
   cursor: pointer;
 }
